[gd_scene load_steps=3 format=3 uid="uid://dlt21atgo4jy5"]

[ext_resource type="Script" path="res://Scripts/MainMenu.gd" id="1_00mpn"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_idkjv"]
bg_color = Color(0, 0.298039, 0.635294, 1)

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_00mpn")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_idkjv")

[node name="MainButtons" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainButtons"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Button" type="Button" parent="MainButtons/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "START"

[node name="Button2" type="Button" parent="MainButtons/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "SHOP"

[node name="Button3" type="Button" parent="MainButtons/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "QUIT"

[node name="Shop" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Shop"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="pressed" from="MainButtons/VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="MainButtons/VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="MainButtons/VBoxContainer/Button3" to="." method="_on_button_3_pressed"]
